@@ -457,11 +457,6 @@ def add_emr_opts(opt_group):
                   ' "Configure IAM Roles for Amazon EMR" in AWS docs')),
 
         opt_group.add_option(
-            '--iam-job-flow-role', dest='iam_job_flow_role',
-            default=None,
-            help='Deprecated alias for --iam-instance-profile'),
-
-        opt_group.add_option(
             '--iam-service-role', dest='iam_service_role',
             default=None,
             help=('IAM Job flow role to use for the EMR cluster - see'
